Updated Package json with Script for Deploy

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-
 {
   "name": "ToysRLife",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/chetanchauhan14/ToysRLife",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -17,15 +17,15 @@
     "slugify": "^1.6.5",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
-
     "extends": [
       "react-app",
       "react-app/jest"
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
