Fixing Source Code Visibility

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ToysRLife",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chetanchauhan14.github.io/ToysRLife",
+  "homepage": "https://chetanchauhan14.github.io/ToysRLife/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
